@@ -45,6 +45,11 @@
 	* src/utils/nautilus-actions-run.c:
 	Mark two new strings for translation.
 
+2010-04-15 Pierre Wieser <pwieser@trychlos.org>
+
+	* src/io-gconf/nagp-writer.c (nagp_iio_provider_is_willing_to_write):
+	Force GConf sync to get ride of 'foo' entry.
+
 2010-04-14 Pierre Wieser <pwieser@trychlos.org>
 
 	* NEWS: Update before release.
